# AdvancedProgramming_ass2

./: .gitignore  CMakeLists.txt  README.md
clientSrc/: Client.cpp  Client.h  main.cpp
clientSrc/Input/: unclassified.csv
serverSrc/: Server.cpp  Server.h  main.cpp
serverSrc/KNN/: KNNClassifier.hpp  KNNFileClassifier.cpp  KNNFileClassifier.hpp  Point.cpp  Point.hpp
serverSrc/KNN/Flowers/: Flower.cpp  Flower.hpp
src/: main.cpp
src/KNN/: KNNClassifier.cpp  KNNFileClassifier.hpp  Point.hpp
